--- a/s/main.css
+++ b/s/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: var(--black);
+  background-color: var(--background);
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1rem;
   color: black;
@@ -12,17 +12,17 @@ body {
 }
 
 a:link {
-    color: var(--pink);
+    color: var(--link);
 }
 
 a:visited {
-    color: var(--orange);
+    color: var(--link-visited);
 }
 
 p {
     margin-top: 0.5rem;
     margin-right: 0.5rem;
-    color: var(--green);
+    color: var(--black);
 }
 
 h1 {
@@ -77,13 +77,14 @@ pre {
 }
 
 .main {
+    background-color: var(--frame-light);
     margin: 1vw;
-    width: 100%;
+    min-width: 98%;
 }
 
 @media screen and (min-width:768px) {
     .main {
-        margin-top: 5rem;
+        /*margin-top: 5rem;*/
         margin-bottom: auto;
         margin-left: auto;
         margin-right: auto;
@@ -99,7 +100,6 @@ img {
 .footer {
     padding: 1rem;
     font-size: 0.75rem;
-    color: var(--nord4);
     text-align: center;
 }
 
@@ -124,4 +124,9 @@ img {
   --blue: #74bcca;
   --pink: #fe98af;
   --orange: #ffcc8f;
+  --background: #282828;
+  --frame: #c3bdb4;
+  --frame-light: #eee;
+  --links: #ceefff;
+  --links-visited: #6300c0;
 }
