add nav bar and anime girl holding c book

--- a/s/main.css
+++ b/s/main.css
@@ -40,6 +40,11 @@ pre {
     white-space: pre-wrap;
 }
 
+nav a {
+    text-align:center;
+    color: var(--pink);
+}
+
 .hero-text {
     order: 2;
 }
